c/examples/gcc/testsuite/c-c++-common/gomp/atomic-31.c
/* c/104531 */
/* { dg-do compile } */

int x;

void
foo (_Complex int y)
{
  #pragma omp atomic compare	/* { dg-error "invalid operands" } */
  x = x > y ? y : x;
}
